<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestPulsa</string>

    <!-- Main Activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_creditBalanceForm">Mobile Credit Balance Form</string>
    <string name="title_phoneNumber">Masukkan Nomor Tujuan :</string>
    <string name="hint_phoneNumber">Masukkan nomor tujuan yang valid</string>
    <string name="button_sendForm">Next</string>

    <!-- Content Description for Image -->
    <string name="cntDesc_buttonKirim">Kirim Button</string>
    <string name="cntDesc_buttonEdit">Edit Button</string>

    <!-- Spinner -->
    <!-- Operator -->
    <string name="title_operatorSpinner">Pilih Operator :</string>
    <string name="operatorPrompt">Silakan pilih operator</string>

    <!-- Spinner -->
    <!-- Server -->
    <string name="title_serverSpinner">Pilih Server :</string>
    <string name="serverPrompt">Silakan pilih server</string>

    <!-- Nominal -->
    <string name="title_predefinedInput">Predefined Value</string>
    <string name="title_nominalValue">Nominal :</string>
    <string name="nominalPrompt">Silakan pilih nilai nominal</string>

    <!-- Pin Dialog -->
    <string name="hint_userPin">Masukkan kode PIN anda</string>
    <string name="title_userPin">Masukkan kode PIN anda:</string>
    <string name="title_pinWarning">Note: Kode PIN akan terhapus ketika applikasi ditutup</string>

    <!-- Confirmation Dialog -->
    <string name="confirmation_info">Konfirmasi Data</string>
    <string name="conf_titleTelp">Nomer Telepon</string>
    <string name="conf_titleOperator">Operator</string>
    <string name="conf_titleNominal">Nominal</string>
    <string name="conf_buttonEdit">Edit</string>
    <string name="conf_buttonConfirm">Kirim</string>

    <!-- Menu -->
    <string name="opt_about">About</string>
    <string name="opt_menuList">More</string>

    <!-- About -->
    <string name="title_about">About this application :</string>
    <string name="content_about">This app created and developed by Android Ranah Minang\'s Developer Team.  Stay connected with us :)</string>

    <!-- Change Pin -->
    <string name="title_pinOld">PIN Lama :</string>
    <string name="title_pinNew">PIN Baru :</string>
    <string name="hint_pinOld">Masukkan PIN lama anda</string>
    <string name="hint_pinNew">Masukkan PIN baru anda</string>
    <string name="button_changePin">Ganti</string>

    <!-- Komplain -->
    <string name="title_komplainNum">Nomor telp :</string>
    <string name="title_komplainText">Keluhan :</string>
    <string name="button_komplain">Kirim</string>
    <string name="hint_komplainNum">Masukkan nomor bermasalah</string>
    <string name="hint_komplainText">Berita keluhan</string>

    <!-- Menu List View -->
    <string name="title_activity_menu_list_view">MenuListView</string>

    <!-- Cek Saldo -->
    <string name="title_pinSaldo">PIN anda :</string>
    <string name="hint_cekSaldo">Masukkan PIN anda</string>
    <string name="button_cekSaldo">Kirim</string>

    <!-- Dashboard -->
    <string name="dashboard_sendSms">Kirim SMS</string>
    <string name="dashboard_userPanel">User Panel</string>
    <string name="dashboard_settings">Settings</string>
    <string name="dashboard_agent">Agent Control</string>
    <string name="title_activity_appDashboard">Dashboard</string>

    <!-- Cek Harga -->
    <string name="title_operatorHarga">Pilih Operator :</string>
    <string name="hargaPrompt">Silakan pilih operator</string>
    <string name="title_pinHarga">PIN anda :</string>
    <string name="hint_pinHarga">Masukkan PIN anda</string>
    <string name="button_cekHarga">Kirim</string>

    <!-- Fragment Panel -->
    <string name="panel_cekSaldo">Cek Saldo</string>
    <string name="panel_cekHarga">Cek Harga</string>
    <string name="panel_cekTransaksi">Cek Transaksi</string>
    <string name="panel_changePin">Ganti PIN</string>
    <string name="panel_complain">Komplain</string>
    <string name="panel_cariKodeKec">Cari Kode</string>
    <string name="panel_cekDepositDown">Cek Deposit Downline</string>
    <string name="panel_hapusAgen">Hapus Agen</string>
    <string name="panel_tambahAgen">Tambah Agen</string>
    <string name="panel_tambahDepositDown">Tambah Deposit Downline</string>

    <!-- Cek Transaksi -->
    <string name="title_cekTrans">PIN anda :</string>
    <string name="hint_cekTrans">Masukkan PIN anda</string>
    <string name="button_cekTrans">Kirim</string>

    <!-- Paralel NO HP -->
    <string name="title_parNumber">Masukkan nomor tujuan :</string>
    <string name="hint_parNumber">Masukkan nomor tujuan yang valid</string>
    <string name="title_pinParalel">PIN anda :</string>
    <string name="hint_pinParalel">Masukkan PIN anda</string>
    <string name="button_sendPar">Kirim</string>

    <!-- Cek Downline Deposit -->
    <string name="title_downDepositNum">Masukkan nomor downline :</string>
    <string name="hint_downDepositNum">Masukkan nomor downline yang valid</string>
    <string name="title_downPin">PIN anda :</string>
    <string name="hint_downPin">Masukkan PIN anda</string>
    <string name="button_sendDownDeposit">Kirim</string>

    <!-- Hapus Agen -->
    <string name="title_hapusAgenNum">Masukkan nomor downline yang akan dihapus :</string>
    <string name="hint_hapusAgenNum">Masukkan nomor downline yang valid</string>
    <string name="title_hapusAgenPin">PIN anda :</string>
    <string name="hint_hapusAgenPin">Masukkan PIN anda</string>
    <string name="button_hapusAgen">Kirim</string>

    <!-- tmbh Deposit Downline -->
    <string name="title_tmbhDpstNum">Masukkan nomor downline :</string>
    <string name="hint_tmbhDpstNum">Masukkan nomor downline yang valid</string>
    <string name="title_tmbhDpstDwn">Masukkan nominal (min 10.000) :</string>
    <string name="hint_tmbhDpstDwn">Masukkan nominal</string>
    <string name="title_tmbhDpstPin">PIN anda :</string>
    <string name="hint_tmbhDpstPin">Masukkan PIN anda</string>
    <string name="button_tmbhDpstDwn">Kirim</string>

    <!-- Cari Kode Kecamatan -->
    <string name="title_cariKodeKec">Masukkan nama kecamatan :</string>
    <string name="hint_cariKodeKec">Masukkan nama kecamatan yang benar</string>
    <string name="title_cariKodePin">PIN anda :</string>
    <string name="hint_cariKodePin">Masukkan PIN anda</string>
    <string name="button_cariKodeKec">Kirim</string>

    <!-- tmbh Agen -->
    <string name="title_tmbhAgenNum">Masukkan nomor agen baru :</string>
    <string name="hint_tmbhAgenNum">Masukkan nomor yang valid</string>
    <string name="title_tmbhAgenName">Nama agen baru :</string>
    <string name="hint_tmbhAgenName">Masukkan nama agen baru</string>
    <string name="title_tmbhAgenMark">Mark up harga :</string>
    <string name="hint_tmbhAgenMark">Nominal mark up</string>
    <string name="title_tmbhAgenSaldo">Saldo agen baru :</string>
    <string name="hint_tmbhAgenSaldo">Nominal saldo</string>
    <string name="title_tmbhAgenKec">Kode kecamatan agen baru :</string>
    <string name="hint_tmbhAgenKec">Kode kecamatan</string>
    <string name="title_tmbhAgenPin">PIN anda :</string>
    <string name="hint_tmbhAgenPin">Masukkan PIN anda</string>
    <string name="button_tmbhAgen">Kirim</string>

    <!-- Preferences -->
    <string name="title_prefsSelectTheme">Tema</string>
    <string name="summary_prefsSelectTheme">Pilih Tema</string>
    <string name="title_prefsDialogPin">Ubah PIN</string>
    <string name="title_prefsButtonOKUserPin">Ubah</string>
    <string name="title_prefsButtonCancelUserPin">Batal</string>
    <string name="title_prefsUserPin">PIN</string>
    <string name="title_prefsDeletePinOn">Hapus PIN Otomatis</string>
    <string name="summary_prefsDeletePinOn">Nomer PIN Anda akan dihapus ketika keluar applikasi</string>
    <string name="title_prefsCategoryPin">Pengaturan PIN</string>
    <string name="summary_prefsUserPin">Ubah atau hapus PIN</string>

    <string-array name="pref_theme_values">
        <item>dark</item>
        <item>light</item>
    </string-array>

    <string name="pref_theme_entries">Theme</string>

    <string-array name="pref_theme_entries">
        <item>Dark</item>
        <item>Light</item>
    </string-array>

    <string name="summary_prefsDevelopmentOnly">Preference for development stage only, must delete this in Release Build</string>
    <string name="title_prefsDevelopmentOnly">Development Stage</string>
    <string name="title_prefsDialogSendTo">SendTo Number</string>
    <string name="message_prefsDialogSendTo">Type SendTo Phone Number, You Fool!</string>
    <string name="title_prefsSendTo">SendTo Phone Number</string>

</resources>