<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/title_pinOld" />

    <EditText
        android:id="@+id/textPinOld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:ellipsize="end"
        android:hint="@string/hint_pinOld"
        android:inputType="numberPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/title_pinNew" />

    <EditText
        android:id="@+id/textPinNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:ellipsize="end"
        android:hint="@string/hint_pinNew"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btn_changePin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="15dip"
        android:text="@string/button_changePin" />

</LinearLayout>