<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/title_komplainNum" />

    <EditText
        android:id="@+id/text_KomplainNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:ellipsize="end"
        android:hint="@string/hint_komplainNum"
        android:inputType="phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/title_komplainText" />

    <EditText
        android:id="@+id/text_KomplainText"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_weight="0.30"
        android:hint="@string/hint_komplainText"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_komplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="15dip"
        android:text="@string/button_komplain" />

</LinearLayout>