<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/title_tmbhAgenNum" />

        <EditText
            android:id="@+id/text_tmbhAgenNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:ellipsize="end"
            android:hint="@string/hint_tmbhAgenNum"
            android:inputType="phone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.45dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="#808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/title_tmbhAgenName" />

        <EditText
            android:id="@+id/text_tmbhAgenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:ellipsize="end"
            android:hint="@string/hint_tmbhAgenName"
            android:inputType="textCapWords" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.45dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="#808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/title_tmbhAgenMark" />

        <EditText
            android:id="@+id/text_tmbhAgenMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:ellipsize="end"
            android:hint="@string/hint_tmbhAgenMark"
            android:inputType="phone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.45dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="#808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/title_tmbhAgenSaldo" />

        <EditText
            android:id="@+id/text_tmbhAgenSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:ellipsize="end"
            android:hint="@string/hint_tmbhAgenSaldo"
            android:inputType="phone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.45dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="#808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/title_tmbhAgenKec" />

        <EditText
            android:id="@+id/text_tmbhAgenKec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:ellipsize="end"
            android:hint="@string/hint_tmbhAgenKec"
            android:inputType="phone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.45dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="#808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/title_tmbhAgenPin" />

        <EditText
            android:id="@+id/text_tmbhAgenPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:ellipsize="end"
            android:hint="@string/hint_tmbhAgenPin"
            android:inputType="numberPassword" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.45dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="#808080" />

        <Button
            android:id="@+id/btn_tmbhAgen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="15dip"
            android:text="@string/button_tmbhAgen" />
    </LinearLayout>

</ScrollView>